# opengl-exp

./: CMakeLists.txt  readme.md
include/common/: loadShader.hpp
include/models/: cube.hpp  triangle.hpp
include/render/: camera.hpp
include/render/entities/: colored_shape.hpp  cube.hpp  simple_shape.hpp  triangle.hpp
shaders/: colored_shape.frag  colored_shape.vert  frag.glsl  simple_shape.vert
src/: loadShader.cpp  main.cpp
